# advent-of-code-python

./: .gitignore  README.md  TODO.md  pyproject.toml
advent/: __init__.py  day1.py  day2.py  main.py
advent/sources/: __init__.py  main.py
advent/year_2024/: day1.py  day2.py  day3.py
sources/: __init__.py  main.py
src/: 1-0.py  1-1.py  2-0.py  2-1.py
tests/: test_2024.py
