# project-specific things
[project]
name = "advent-of-code-python"
version = "2024.12.3"
description = "ðŸ Comprehensive Advent of Code solutions (2024 and onwards) written in Python."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "HitBlast", email = "hitblastlive@gmail.com" }]
dependencies = [
    "click>=8.1.7",
    "importlib>=1.0.4",
    "pytest>=8.3.4",
]
scripts = { advent = "advent.main:cli" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["advent"]

[tool.hatch.build.targets.wheel]
packages = ["advent"]

# code style-specific things (ruff used definitely)
[tool.ruff]
target-version = "py313"
line-length = 90
exclude = [".venv"]
fix = true
